methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:58: error: Invalid literal number
for(i<-1to3){
       ^PatternPicture:58: error: illegal start of simple expression
for(i<-1to3){
       ^PatternPicture:65: error: ')' expected but '}' found.
} 
^